@@ -11,7 +11,6 @@
  *
  */
 
-#define MAGICK_IMPLEMENTATION 1
 #if !defined(_VISUALC_)
 #include <magick_config.h>
 #endif
